# math

./: .gitignore  CMakeLists.txt  README.md
example/project/vector/: CMakeLists.txt
example/project/vector/source/: main.cpp
source/FOSL/: math.cpp  math.hpp
source/FOSL/math/: PID.hpp  matrix-impl.hpp  matrix.hpp  vector.hpp  vector2-impl.hpp  vector2.hpp  vector3-impl.hpp  vector3.hpp
source/FOSL/math/PID/: real-impl.hpp  real.hpp  templated-impl.hpp  templated.hpp
source/FOSL/math/vector/: fixed_size-impl.hpp  fixed_size.hpp
